--- a/content-web/charts/web/values.yaml
+++ b/content-web/charts/web/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: [LOGINSERVER]/content-web
+  repository: fabmedicalblg.azurecr.io/content-web
   pullPolicy: Always
 
 imagePullSecrets: []
